--- a/homeworks/week7/Challenge/W7Challenge.css
+++ b/homeworks/week7/Challenge/W7Challenge.css
@@ -13,7 +13,7 @@
   position: relative;
 }
 
-.sildeShow{
+.silde-Show{
   width: 100%;
   height: 100%;
   position: relative;
@@ -80,13 +80,6 @@
   cursor: pointer;
 }
 
-
-@media (max-width: 768px) {
-  .carousel {
-    width: 98vw;
-  }
-}
-
 .silde1{
   background-color: rgb(175, 194, 248);
   
@@ -104,10 +97,17 @@
 
 .hide{
   display: none;
-  
 }
 
 .stopS{ 
   
   background-color: rgba(255, 255, 255, 0.7) !important;
+}
+
+
+
+@media (max-width: 768px) {
+  .carousel {
+    width: 98vw;
+  }
 }
