--- a/homeworks/week8/hw1/style.css
+++ b/homeworks/week8/hw1/style.css
@@ -15,8 +15,7 @@ a {
 }
 
 .container {
-  max-width: 1280px;
-  margin: 0 auto;
+  max-width: 100vw;
   padding: 0 15px;
 }
 
@@ -70,6 +69,10 @@ header .logo {
 
 
 /* footer style*/
+footer{
+  max-width: 100vw;
+}
+
 .footer-top {
   background-color: #e8efee;
   padding: 40px 0;
