--- a/homeworks/week11/hw2/style.css
+++ b/homeworks/week11/hw2/style.css
@@ -26,18 +26,20 @@ h2 {
   outline: red 1px solid;
 }
 
+
+
 /* header */
 header{
   width: 100%;
   display: flex;
   justify-content: space-between;
-  padding: 2rem;
+  padding: 1rem 4rem;
   background-color: rgb(236, 227, 218);
 }
 
 .logo{
   font-size: 2.8rem;
-  color: green;
+  color: rgb(51, 153, 90);
 }
 
 nav{
@@ -57,7 +59,7 @@ nav a:nth-child(2){
 }
 
 nav a:hover{
-  color:rgb(238, 223, 93);
+  color:rgb(51, 153, 90);
   font-style: italic;
 }
 
@@ -67,7 +69,6 @@ nav a:hover{
   width: 100%;
   padding: 0 0.5rem;
 }
-
 
 
 
@@ -161,12 +162,12 @@ section>h2{
 .card-admin-btn a{
   font-size: 1rem;
   padding: .2rem .5rem;
-  background-color: khaki;
+  background-color: rgb(236, 227, 218);
   opacity: 0.8;
 }
 
-.card-admin-btn a:first-child:hover{
-  background-color: green;
+.card-admin-btn a:nth-child(-n+2):hover{
+  background-color: rgb(51, 153, 90);
 }
 
 .admin-btn{
@@ -179,31 +180,45 @@ section>h2{
 .create-btn{
   font-size: 1rem;
   padding: .2rem .5rem;
-  background-color: khaki;
+  background-color: rgb(236, 227, 218);
   border-radius: 5px;
   margin-left: .5rem;
 }
 
 .create-btn:hover{
-  background-color: green;
+  background-color: rgb(51, 153, 90);
   color:white;
 }
 
 
 
 
-.more-btn{
-  display: block;
-  width: fit-content;
-  margin: 3rem auto;
-  border-radius:20px;
-  font-size: 1.2rem;
-  padding: .8rem;
+.page-info{
+  text-align: center;
+  font-size: 1rem;
+  margin: 0.5rem auto;
+  margin-top: 1rem;
 }
 
-.more-btn:hover{
-  background-color: khaki;
+.paginator{
+  display: flex;
+  justify-content: center;
+  margin-bottom: 1rem;
 }
+.paginator a{
+  font-size: 1rem;
+  padding: .2rem .5rem;
+  background-color: rgb(236, 227, 218);
+  border-radius: 5px;
+  margin-left: .5rem;
+}
+
+.paginator a:hover{
+  background-color: rgb(51, 153, 90);
+  color:white;
+}
+
+
 
 footer{
   width: 100%;
@@ -219,7 +234,7 @@ footer{
 /* login-page */
 .login-board{
   display: block;
-  border: 2px solid forestgreen;
+  border: 2px solid rgb(51, 153, 90);
   width: 30%;
   height: 15rem;
   margin: 10rem auto;
@@ -251,7 +266,7 @@ footer{
 .username>input , .password>input{
   height: 1.5rem;
   border-radius: 5px;
-  border:green solid 1.5px;
+  border:rgb(51, 153, 90) solid 1.5px;
   font-size: 1.2rem;
   width: 40%;
 }
@@ -261,12 +276,11 @@ footer{
   background-color: rgb(236, 236, 236);
   padding: .2rem 1rem;
   border-radius: 5px;
-  border: 1.5px green ;
-  margin-bottom: .4rem;
+  border: 1.5px rgb(51, 153, 90) ;
 }
 
 .submit-btn:hover{
-  background-color: green;
+  background-color: rgb(51, 153, 90);
   color: aliceblue;
   cursor: pointer;
 }
@@ -278,14 +292,14 @@ footer{
 }
 
 .login-board a:hover{
-  color: green;
+  color: rgb(51, 153, 90);
 }
 
 
 /* edit-page */
 .panel{
   display: block;
-  border: 2px solid forestgreen;
+  border: 2px solid rgb(51, 153, 90);
   width: 70%;
   margin: 3rem auto;
   border-radius: 5px;
@@ -297,7 +311,7 @@ footer{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 1.2rem 4rem;
+  margin: 1.2rem 2rem;
 }
 
 .ed-title{
@@ -309,17 +323,18 @@ footer{
 }
 
 .ed-back-btn:hover{
-  color: green;
+  color: rgb(51, 153, 90);
 }
 
 textarea{
   width: 95%;
   border-radius: 5px;
-  border:rgb(155, 155, 155) solid 1.5px;
+  border:rgb(155, 155, 155) solid 1.2px;
   font-size: 1.6rem;
   padding: .5rem;
   background-color: rgb(236, 236, 236);
 }
+
 
 
 .delete-btn{
@@ -327,7 +342,7 @@ textarea{
   background-color: rgb(236, 236, 236);
   padding: .2rem 1rem;
   border-radius: 5px;
-  margin-bottom: .4rem;
+  line-height: 1.5rem;
 }
 
 .delete-btn:hover{
@@ -336,17 +351,30 @@ textarea{
   cursor: pointer;
 }
 
-.ed-form div{
-  margin: 1rem;
+.ed-form>div{
+  padding: 1rem;
+  margin-left: 1rem;
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
 }
+
+
+select{
+  width: 8rem;
+  height: 2.5rem;
+  border: 1px solid rgb(51, 153, 90);
+  background-color: rgb(236, 236, 236);
+  font-size: 1rem;
+  border-radius: 5px;
+
+}
+
 
 
 /* article-page */
 .article{
   display: block;
-  border: 1.5px solid forestgreen;
+  border: 1.5px solid rgb(51, 153, 90);
   width: 100%;
   min-height: 80vh;
   margin: 3rem auto;
@@ -357,7 +385,8 @@ textarea{
 
 .atc-title{
   font-size: 3rem;
-  margin: 2rem 0 1rem 0;
+  margin-bottom:1rem;
+  padding-top: 2rem;
 }
 
 .atc-category{
@@ -379,7 +408,7 @@ textarea{
 
 .list-block{
   display: block;
-  border: 1.5px solid forestgreen;
+  border: 1.5px solid rgb(51, 153, 90);
   width: 100%;
   min-height: 80vh;
   margin: 3rem auto;
@@ -396,6 +425,86 @@ textarea{
   text-align: justify;
   word-break: break-all;
   white-space: pre-line;
-  border-bottom: solid 1px green;
+  border-bottom: solid 1px rgb(51, 153, 90);
   padding-bottom: 0.5rem;
+  display: flex;
+  justify-content: space-between;
+}
+
+.list-title>p{
+  font-size: 1.1rem;
+  min-width: 6rem;
+  color: rgb(148, 148, 148);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: 1rem;
+}
+
+.list-title:hover{
+  color: green;
+
+}
+
+
+
+.page .list-title:nth-child(1) {
+  display: block;
+}
+.page .list-title:nth-child(2) {
+  display: block;
+}
+
+
+
+#more-btn{
+  display: block;
+  width: fit-content;
+  margin: 3rem auto;
+  border-radius:20px;
+  font-size: 1.2rem;
+  padding: .8rem;
+}
+
+#more-btn:hover{
+  background-color: rgb(236, 227, 218);
+}
+
+
+/* about */
+.about-card{
+  display: flex;
+  width: 100%;
+  height: 70vh;
+  padding: 2rem;
+}
+
+.about-info{
+  margin:1rem;
+}
+
+h1{
+  font-size:2.5rem;
+  padding: 1rem 1.5rem;
+}
+
+.about-info>p{
+  font-size: 1rem;
+  padding: 1rem 1.5rem;
+  text-align: justify;
+  white-space: pre-line;
+  word-break: break-word;
+}
+
+.link{
+  display: block;
+  width:fit-content;
+  margin:0 auto;
+  padding-top: 1rem;
+}
+
+.link-btn{
+  width: 2.5rem;
+  height: 2.5rem;
+  margin: 0 .3rem;
 }
