--- a/homeworks/week10/Restaurant Web/backupStyle.css
+++ b/homeworks/week10/Restaurant Web/backupStyle.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 * {
   box-sizing: border-box;
   margin: 0;
@@ -12,7 +11,6 @@ section {
 
 a {
   text-decoration: none;
-  color: red;
 }
 
 .container {
@@ -33,15 +31,19 @@ a {
   padding-left: 16px;
 }
 
+
+
+
 header {
   box-shadow: -1.4px -1.4px 6px 0 #97a2a0;
   max-width: 100vw;
 }
+
 header .container {
   display: flex;
   justify-content: space-between;
-  align-items: unset;
 }
+
 header .logo {
   margin: auto 0;
   padding-left: 25px;
@@ -52,6 +54,7 @@ header .logo {
   justify-content: space-around;
   align-items: center;
 }
+
 .header-nav a {
   color: #010101;
   font-size: 18px;
@@ -61,14 +64,23 @@ header .logo {
   margin: 20px 5px;
   transition: background 500ms ease, color 500ms ease;
 }
+
 .header-nav a:hover {
   background: #ff7286;
   color: #fefefe;
 }
+
 .header-nav .active {
   background: #ff7286;
   color: #fefefe;
 }
+
+
+
+
+
+
+
 
 .banner {
   position: relative;
@@ -76,6 +88,7 @@ header .logo {
   height: 580px;
   margin-bottom: 80px;
 }
+
 .banner::after {
   content: "";
   background: rgba(0, 0, 0, 0.3);
@@ -85,6 +98,7 @@ header .logo {
   bottom: 0;
   left: 0;
 }
+
 .banner h1 {
   position: absolute;
   top: 50%;
@@ -94,6 +108,11 @@ header .logo {
   color: #fff;
   z-index: 1;
 }
+
+
+
+
+
 
 .description p {
   margin-bottom: 20px;
@@ -111,6 +130,7 @@ header .logo {
   cursor: pointer;
   transition: transform 300ms ease;
 }
+
 .buttons button:hover {
   transform: scale(1.05);
 }
@@ -118,31 +138,45 @@ header .logo {
 .btn-order {
   background: #a8e8e1;
 }
+
 .btn-search {
   background: #f9f9b5;
 }
 
+
+
+
+
 .menu-images {
-  margin-bottom: 80px;
   display: flex;
+  margin-bottom: 80px;
   justify-content: center;
-  align-items: unset;
 }
+
 .menu-images div {
   max-width: 25%;
   overflow: hidden;
 }
+
 .menu-images img {
   max-width: 100%;
 }
 
+
+
+
+
+
+
 .comments {
   margin-bottom: 90px;
 }
+
 .comments-body {
-  display: flex;
+  display: flex;  
   margin-top: 30px;
 }
+
 .comments-comment {
   position: relative;
   border: 1px solid #c7e5ec;
@@ -150,11 +184,12 @@ header .logo {
   box-shadow: -1.4px -1.4px 4px 0 #d8eaef;
   flex: 1;
   margin-top: 60px;
-  margin: 0 8px;
+  margin : 0 8px;
   padding: 0 25px;
   letter-spacing: 0.14px;
   line-height: 1.5em;
 }
+
 .comments-comment img {
   position: absolute;
   transform: translate(-50%, -50%);
@@ -162,173 +197,189 @@ header .logo {
   border-radius: 50%;
   background-color: #c1c1c1;
 }
+
 .comments-comment div {
   margin: 55px 0 50px;
-  padding-top: 10px;
 }
+
 .comments-comment p:last-child {
   margin-top: 10px;
 }
 
-h4 {
+h4{
   font-size: 25px;
 }
+
+.comments-comment > div{
+  padding-top: 10px;
+}
+
+
+
+
 
 .location {
   margin-bottom: 40px;
 }
-.location iframe {
+
+.location iframe{
   display: block;
 }
 
+
+
+
 /* faq */
+
 .description {
   margin: 50px 0;
 }
-.description .container {
+
+
+.description .container{
+ 
   max-width: 800px;
   margin: 0 auto;
   padding: 0 15px;
   text-align: center;
 }
 
-.Question {
+.Question{
   text-align: left;
   border-bottom: 2px solid #a3dea2;
   margin: 20px 0;
   padding-bottom: 20px;
   display: flex;
+  
 }
-.Question div {
+
+.Question > div{
   display: inline-block;
 }
-.Question-list {
-  color: #a3dea2;
+
+.Question-list{
+  color:#a3dea2;
   font-size: 24px;
   font-weight: bold;
   cursor: default;
   display: inline-block;
 }
-.Question-title {
+
+.Question-title{
   font-size: 18px;
   margin-left: 15px;
-}
-.Question-title:hover {
-  cursor: pointer;
+  cursor:pointer;
+
 }
 
-.answer {
+.answer{
   text-align: justify;
   padding-left: 20px;
   font-size: 16px;
   margin-top: 15px;
-  letter-spacing: 2.5pt;
+  letter-spacing : 2.5pt;
   cursor: default;
   max-height: 0;
   overflow: hidden;
+  
 }
 
-.active-key {
-  overflow: visible;
+.active-key{
+  overflow:visible;
   max-height: 400px;
-  transition: max-height 500ms ease-out;
+  transition: max-height  500ms ease-out;
 }
+
+
 
 /* lottery */
+
 /* 換背景圖 */
-.FIRST-bg {
+.FIRST-bg{
   height: 520px;
-  background: url(./images/lottery-flight.jpg) left/cover no-repeat;
-  position: relative;
+  background: url(./images/lottery-flight.jpg) left/cover no-repeat ;
+  position:relative;
 }
 
-.SECOND-bg {
+.SECOND-bg{
   height: 520px;
-  background: url(./images/lottery-tv.jpg) left/cover no-repeat;
-  position: relative;
+  background: url(./images/lottery-tv.jpg) left/cover no-repeat ;
+  position:relative;
 }
 
-.THIRD-bg {
+.THIRD-bg{
   height: 520px;
-  background: url(./images/lottery-youtuber.jpg) left/cover no-repeat;
-  position: relative;
+  background: url(./images/lottery-youtuber.jpg) left/cover no-repeat ;
+  position:relative;
 }
 
-.event-bg {
-  height: 520px;
-  background: url(./images/lottery-eventsbg.png) left/cover no-repeat;
-  position: relative;
-}
-
-.NONE-bg {
+.NONE-bg{
   width: 100%;
   height: 520px;
-  background-color: #1b1b1b;
-  position: relative;
-  color: white;
+  background-color: rgb(27, 27, 27);
+  position:relative;
+  color:white
 }
 
+.event-bg{
+  height: 520px;
+  background: url(./images/lottery-eventsbg.png) left/cover no-repeat ;
+  position:relative;
+}
+
+
+
 /* 活動辦法 */
-.eventMethod-block {
+.eventMethod-block{
   width: 400px;
   height: 400px;
   background-color: white;
-  position: absolute;
+  position:absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   border-radius: 16px;
 }
-.eventMethod-block:nth-child(2) {
-  height: 40px;
-}
-.eventMethod-block:nth-child(2) .description-content {
-  padding-top: 3px;
-}
-.eventMethod-block:nth-child(3) {
-  height: 110px;
-  padding: 10px 0;
-}
-.eventMethod-block:nth-child(4) {
-  height: 130px;
-  padding: 10px 0;
-}
-.eventMethod-title {
+
+
+.eventMethod-title{
   width: 100%;
   height: 60px;
   font-size: 20px;
   font-weight: bold;
   color: #5ec1b6;
   display: flex;
-  justify-content: center;
   align-items: center;
-}
-.eventMethod-description {
-  display: flex;
-  margin: 0 15px;
-  border-bottom: 1px dashed #cdcdcd;
-}
-.eventMethod-btn {
-  font-size: 18px;
-  color: white;
-  width: 70%;
-  height: 40px;
-  border-radius: 8px;
-  border: none;
-  background-color: #ff7286;
-  position: absolute;
-  top: calc(100% - 40px);
-  left: 50%;
-  transform: translate(-50%, -50%);
+  justify-content: center;
 }
 
-.description-subject {
+.eventMethod-description{
+  display: flex;
+  margin: 0 15px;
+  border-bottom:1px dashed #cdcdcd;
+}
+
+.eventMethod-block :nth-child(2){
+  height: 40px;
+}
+.eventMethod-block :nth-child(3){
+  height: 110px;
+  padding: 10px 0;
+}
+.eventMethod-block :nth-child(4){
+  height: 130px;
+  padding: 10px 0;
+}
+
+
+.description-subject{
   font-size: 16px;
   font-weight: bold;
   color: #322929;
   width: 25%;
 }
-.description-content {
+
+.description-content{
   font-size: 14px;
   text-align: justify;
   color: #322929;
@@ -336,38 +387,67 @@ h4 {
   height: 100%;
 }
 
-button:hover {
-  cursor: pointer;
+/* 例外處理 */
+.eventMethod-block :nth-child(2)>.description-content{
+  padding-top: 3px;
 }
 
-.hide {
-  visibility: hidden;
+
+.eventMethod-btn{
+  font-size: 18px;
+  color: white;
+  width: 70%;
+  height: 40px;
+  border-radius: 8px;
+  border: none;
+  background-color: #e62a45;
+  position: absolute;
+  bottom: 10px;
+  right: 50%;
+  transform: translateX(50%);
 }
+
+button:hover{
+  cursor: pointer ;
+}
+
+
+
+.hide{
+  visibility:hidden;
+}
+
 
 /* 公布結果 */
-.announce-content {
-  font-size: 28px;
+.announce-content{
+  font-size: 28px;;
   text-align: center;
-  position: absolute;
-  top: 30%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  position:absolute;
+  top:30%;
+  left:50%;
+  transform: translateX(-50%);
 }
-.announce-btn {
+
+.announce-btn{
   font-size: 18px;
   color: white;
   width: 20%;
   height: 40px;
   border-radius: 8px;
   border: none;
-  background-color: #ff7286;
+  background-color: #e62a45;
   position: absolute;
-  top: calc(100% - 250px);
-  left: 50%;
-  transform: translate(-50%, -50%);
+  bottom: 200px;
+  right: 50%;
+  transform: translateX(50%);
 }
 
-footer {
+
+
+
+
+
+footer{
   max-width: 100vw;
 }
 
@@ -376,17 +456,20 @@ footer {
   padding: 40px 0;
   color: #484848;
 }
+
 .footer-top .container {
   display: flex;
   justify-content: space-between;
-  align-items: unset;
 }
+
 .footer-info {
   line-height: 2em;
 }
+
 .footer-sites {
   text-align: right;
 }
+
 .footer-bottom {
   background: #35564b;
   color: #fff;
@@ -394,8 +477,15 @@ footer {
   padding: 15px 0;
 }
 
-@media (max-width: 768px) {
-  body {
+
+
+
+
+
+
+@media(max-width: 768px) {
+
+  body{
     max-width: 100vw;
   }
 
@@ -403,6 +493,7 @@ footer {
     align-items: center;
     flex-direction: column;
   }
+
   header .logo {
     margin: 16px auto 0;
   }
@@ -414,17 +505,22 @@ footer {
     transition: 0.5s;
     margin: 2px 0 10px 0;
   }
-  .header-nava {
+
+  .header-nav a {
     margin: 5px;
     padding: 14px 10px;
   }
-  .header-nav.show {
+
+  .header-nav.show{
     height: 50vh;
   }
+
+ 
 
   .buttons {
     margin-bottom: 80px;
   }
+
   .buttons button {
     width: 200px;
     height: 120px;
@@ -435,16 +531,19 @@ footer {
   .menu-images {
     flex-direction: column;
   }
+
   .menu-images div {
     min-width: 100%;
   }
+  
   .menu-images img {
     width: 100%;
   }
-
+  
   .comments-body {
     flex-direction: column;
   }
+
   .comments-comment {
     min-height: 100px;
     max-width: 70vw;
@@ -454,18 +553,18 @@ footer {
   .footer-top .container {
     flex-direction: column-reverse;
   }
+
   .footer-sites {
     text-align: center;
     margin-bottom: 40px;
   }
 
-  .announce-content {
+
+  .announce-content{
     font-size: 4vw;
   }
 
-  .eventMethod-block {
+  .eventMethod-block{
     max-width: 95vw;
   }
 }
-
-/*# sourceMappingURL=style.css.map */
