--- a/homeworks/week18/hw1/views/index.ejs
+++ b/homeworks/week18/hw1/views/index.ejs
@@ -30,10 +30,10 @@
   <section class="menu">
       <h2 class="title">Menu 搶先看</h2>
       <div class="menu-images">
-        <div><img src="/images/homepg-f1.png" alt=""></div>
-        <div><img src="/images/homepg-f2.png" alt=""></div>
-        <div><img src="/images/homepg-f3.png" alt=""></div>
-        <div><img src="/images/homepg-f4.png" alt=""></div>
+        <div><img src="/images/dishes-f1.png" alt=""></div>
+        <div><img src="/images/dishes-f2.png" alt=""></div>
+        <div><img src="/images/dishes-f3.png" alt=""></div>
+        <div><img src="/images/dishes-f4.png" alt=""></div>
       </div>
   </section>
 
