--- a/homeworks/week18/hw1/views/templates/header.ejs
+++ b/homeworks/week18/hw1/views/templates/header.ejs
@@ -3,7 +3,7 @@
     <div class="logo"><a href="/">Just A Bite!</a></div>
     <nav class="header-nav">
       <a class="nav-lottery" href="/lottery">抽個大獎</a>
-      <a class="nav-empty" href="#">我要點餐</a>
+      <a class="nav-menu" href="/menu">我要點餐</a>
       <a class="nav-empty" href="#">查詢訂單</a>
       <a class="nav-faq" href="/faq">常見問題</a>
     </nav>
@@ -22,8 +22,8 @@
         document.querySelector('.nav-lottery').classList.add('active')
         break;
       
-      case '#':
-        document.querySelector('.nav-empty').classList.add('active')
+      case '/menu':
+        document.querySelector('.nav-menu').classList.add('active')
         break;
     
       case '#':
